audit history update (#336)
* audit history - part changes except role base scenarios

* pagination related changes - wip

* audit history - sorting and pagination wip

* audit history - pagination and sorting wip

* audit history - sorting and pagination - wip

* Audit history pagination and sorting

* Code ql scan fix
